--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -40,7 +40,17 @@
         "react-refresh-typescript": "2.0.9",
         "webpack": "5.88.2",
         "webpack-dev-middleware": "7.0.0",
-        "webpack-hot-middleware": "2.26.0"
+        "webpack-hot-middleware": "2.26.0",
+        "buffer": "6.0.3",
+        "crypto-browserify": "3.12.0",
+        "events": "3.3.0",
+        "file-loader": "6.2.0",
+        "process": "0.11.10",
+        "stream-browserify": "3.0.0",
+        "ts-loader": "8.0.3",
+        "typescript": "5.2.2",
+        "url": "0.11.3",
+        "util": "0.12.5"
     },
     "devDependencies": {
         "@emotion/react": "11.11.1",
@@ -59,17 +69,7 @@
         "@types/passport-local": "1.0.33",
         "@types/react": "18.2.23",
         "@types/react-helmet": "6.1.0",
-        "@types/webpack-hot-middleware": "2.25.9",
-        "buffer": "6.0.3",
-        "crypto-browserify": "3.12.0",
-        "events": "3.3.0",
-        "file-loader": "6.2.0",
-        "process": "0.11.10",
-        "stream-browserify": "3.0.0",
-        "ts-loader": "8.0.3",
-        "typescript": "5.2.2",
-        "url": "0.11.3",
-        "util": "0.12.5"
+        "@types/webpack-hot-middleware": "2.25.9"
     },
     "main": "./dist/generated/index.js",
     "types": "./dist/generated/index.d.ts"
