--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@proteinjs/server",
-    "version": "1.0.6",
+    "version": "1.0.3",
     "description": "A server impl",
     "publishConfig": {
         "access": "public"
@@ -22,43 +22,35 @@
         "dev": "DEVELOPMENT=true node dist/generated/index.js"
     },
     "dependencies": {
-        "@emotion/react": "11.11.1",
-        "@emotion/styled": "11.11.0",
-        "@mui/icons-material": "5.14.11",
-        "@mui/joy": "5.0.0-beta.8",
-        "@mui/material": "5.14.11",
         "@pmmmwh/react-refresh-webpack-plugin": "0.5.11",
         "@proteinjs/db": "1.0.3",
         "@proteinjs/reflection": "1.0.2",
         "@proteinjs/server-api": "1.0.2",
         "@proteinjs/util": "1.0.18",
-        "@types/react": "18.2.23",
-        "@types/react-helmet": "6.1.0",
-        "@types/webpack-hot-middleware": "2.25.9",
         "body-parser": "1.19.0",
-        "buffer": "6.0.3",
         "compression": "1.7.4",
         "cookie-parser": "1.4.5",
-        "crypto-browserify": "3.12.0",
-        "events": "3.3.0",
         "express": "4.17.1",
         "express-session": "1.17.1",
-        "file-loader": "6.2.0",
         "passport": "0.4.1",
         "passport-local": "1.0.0",
-        "process": "0.11.10",
         "react": "18.2.0",
         "react-helmet": "6.1.0",
         "react-refresh": "0.14.0",
         "react-refresh-typescript": "2.0.9",
+        "webpack": "5.88.2",
+        "webpack-dev-middleware": "7.0.0",
+        "webpack-hot-middleware": "2.26.0",
+        "buffer": "6.0.3",
+        "crypto-browserify": "3.12.0",
+        "events": "3.3.0",
+        "file-loader": "6.2.0",
+        "process": "0.11.10",
         "stream-browserify": "3.0.0",
         "ts-loader": "8.0.3",
         "typescript": "5.2.2",
         "url": "0.11.3",
-        "util": "0.12.5",
-        "webpack": "5.88.2",
-        "webpack-dev-middleware": "7.0.0",
-        "webpack-hot-middleware": "2.26.0"
+        "util": "0.12.5"
     },
     "devDependencies": {
         "@proteinjs/reflection-build": "1.0.5",
@@ -69,7 +61,10 @@
         "@types/express-session": "1.17.0",
         "@types/node": "14.0.13",
         "@types/passport": "1.0.4",
-        "@types/passport-local": "1.0.33"
+        "@types/passport-local": "1.0.33",
+        "@types/react": "18.2.23",
+        "@types/react-helmet": "6.1.0",
+        "@types/webpack-hot-middleware": "2.25.9"
     },
     "main": "./dist/generated/index.js",
     "types": "./dist/generated/index.d.ts"
