--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,6 +26,7 @@
         "@proteinjs/reflection": "1.0.7",
         "@proteinjs/server-api": "^1.0.8",
         "@proteinjs/util": "1.1.0",
+        "@proteinjs/util-node": "1.2.0",
         "body-parser": "1.19.0",
         "buffer": "6.0.3",
         "compression": "1.7.4",
