--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -35,6 +35,11 @@
         "@types/passport-local": "1.0.33",
         "@types/react": "16.9.49",
         "@types/react-helmet": "6.1.0",
+        "@typescript-eslint/eslint-plugin": "7.8.0",
+        "@typescript-eslint/parser": "7.8.0",
+        "eslint": "8.57.0",
+        "eslint-config-prettier": "9.1.0",
+        "eslint-plugin-prettier": "5.1.3",
         "typescript": "5.2.2"
     },
     "main": "./dist/generated/index.js",
