--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -64,7 +64,12 @@
         "@types/passport-local": "1.0.33",
         "@types/react": "18.2.23",
         "@types/react-helmet": "6.1.0",
-        "@types/webpack-hot-middleware": "2.25.9"
+        "@types/webpack-hot-middleware": "2.25.9",
+        "@typescript-eslint/eslint-plugin": "7.8.0",
+        "@typescript-eslint/parser": "7.8.0",
+        "eslint": "8.57.0",
+        "eslint-config-prettier": "9.1.0",
+        "eslint-plugin-prettier": "5.1.3"
     },
     "main": "./dist/generated/index.js",
     "types": "./dist/generated/index.d.ts"
