--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,6 +32,7 @@
     "compression": "1.7.4",
     "cookie-parser": "1.4.5",
     "crypto-browserify": "3.12.0",
+    "css-loader": "7.1.2",
     "events": "3.3.0",
     "express": "4.17.1",
     "express-session": "1.17.1",
@@ -44,6 +45,7 @@
     "react-refresh": "0.14.0",
     "react-refresh-typescript": "2.0.9",
     "stream-browserify": "3.0.0",
+    "style-loader": "4.0.0",
     "ts-loader": "8.0.3",
     "typescript": "5.2.2",
     "url": "0.11.3",
