--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -39,6 +39,7 @@
     "file-loader": "6.2.0",
     "passport": "0.4.1",
     "passport-local": "1.0.0",
+    "path-browserify": "1.0.1",
     "process": "0.11.10",
     "react": "18.2.0",
     "react-helmet": "6.1.0",
