--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -45,6 +45,7 @@
     "react-helmet": "6.1.0",
     "react-refresh": "0.14.0",
     "react-refresh-typescript": "2.0.9",
+    "socket.io": "4.7.5",
     "stream-browserify": "3.0.0",
     "style-loader": "4.0.0",
     "ts-loader": "8.0.3",
