--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -22,9 +22,9 @@
   },
   "dependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.11",
+    "@proteinjs/logger": "1.0.1",
     "@proteinjs/reflection": "1.1.8",
     "@proteinjs/server-api": "^1.4.1",
-    "@proteinjs/util": "1.4.0",
     "@proteinjs/util-node": "1.4.0",
     "body-parser": "1.19.0",
     "buffer": "6.0.3",
