feat: added `SocketIOServerRepo` to get access to the socket.io server. It enables the socket.io server to be provided by the app's server via `@proteinjs/event/DefaultSocketIOServerFactory`.
BREAKING CHANGE: we used to initialize the socket.io server in `startServer` and export as a const.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.11",
+    "@proteinjs/event": "1.0.1",
     "@proteinjs/logger": "1.0.6",
     "@proteinjs/reflection": "1.1.9",
     "@proteinjs/server-api": "^1.5.0",
