--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -66,6 +66,11 @@
     "@types/passport-local": "1.0.33",
     "@types/react": "18.2.23",
     "@types/react-helmet": "6.1.0",
+    "react-dom": "18.2.0",
+    "react-router": "6.16.0",
+    "react-router-dom": "6.16.0",
+    "@types/react-router": "5.1.20",
+    "@types/react-router-dom": "5.3.3",
     "@types/webpack-hot-middleware": "2.25.9",
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
