--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -51,6 +51,7 @@
     "typescript": "5.2.2",
     "url": "0.11.3",
     "util": "0.12.5",
+    "vm-browserify": "1.1.2",
     "webpack": "5.88.2",
     "webpack-dev-middleware": "7.0.0",
     "webpack-hot-middleware": "2.26.0"
