--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,40 +21,23 @@
     "watch": "reflection-watch"
   },
   "dependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "0.5.11",
     "@proteinjs/event": "^1.0.8",
     "@proteinjs/logger": "1.0.12",
     "@proteinjs/reflection": "1.1.10",
     "@proteinjs/server-api": "^2.0.2",
     "@proteinjs/util-node": "1.6.0",
     "body-parser": "1.19.0",
-    "buffer": "6.0.3",
     "cookie-parser": "1.4.5",
-    "crypto-browserify": "3.12.0",
-    "css-loader": "7.1.2",
     "events": "3.3.0",
     "express": "4.17.1",
     "express-session": "1.17.1",
-    "file-loader": "6.2.0",
     "passport": "0.4.1",
     "passport-local": "1.0.0",
-    "path-browserify": "1.0.1",
     "process": "0.11.10",
     "react": "18.2.0",
     "react-helmet": "6.1.0",
-    "react-refresh": "0.14.0",
-    "react-refresh-typescript": "2.0.9",
     "socket.io": "4.7.5",
-    "stream-browserify": "3.0.0",
-    "style-loader": "4.0.0",
-    "ts-loader": "8.0.3",
-    "typescript": "5.2.2",
-    "url": "0.11.3",
-    "util": "0.12.5",
-    "vm-browserify": "1.1.2",
-    "webpack": "5.88.2",
-    "webpack-dev-middleware": "7.0.0",
-    "webpack-hot-middleware": "2.26.0"
+    "typescript": "5.2.2"
   },
   "devDependencies": {
     "@proteinjs/reflection-build": "1.4.1",
@@ -69,15 +52,11 @@
     "@types/react-helmet": "6.1.0",
     "@types/react-router": "5.1.20",
     "@types/react-router-dom": "5.3.3",
-    "@types/webpack-hot-middleware": "2.25.9",
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-prettier": "5.1.3",
-    "react-dom": "18.2.0",
-    "react-router": "6.16.0",
-    "react-router-dom": "6.16.0"
+    "eslint-plugin-prettier": "5.1.3"
   },
   "main": "./dist/generated/index.js",
   "types": "./dist/generated/index.d.ts"
